# worker-compass

./: .env.example  .gitignore  Dockerfile  PROCESS.md  README.md  docker-compose.yml  pyproject.toml
app/: agent.py  config.py  main.py  prompts.py  retrieval.py
corpus/: bm25_index.pkl  build_index.py
corpus/chunks/: mom.jsonl  tadm.jsonl  tafep.jsonl
corpus/etl/: chunk.py  pdf_utils.py  run_all.py  scrape_mom.py  scrape_tadm.py  scrape_tafep.py
corpus/lancedb/__manifest/_transactions/: 0-a3fbb2aa-0ef1-4b0d-9a29-6bdd7d809902.txn
corpus/lancedb/chunks.lance/_indices/215bebf8-aa68-4c8b-99a9-4240f6f841f0/: auxiliary.idx  index.idx
corpus/lancedb/chunks.lance/_indices/94649660-3aee-4e5a-9688-ce3afe37ab9c/: auxiliary.idx  index.idx
corpus/lancedb/chunks.lance/_indices/a063f234-acbd-41b5-aca1-150cd1e533ad/: auxiliary.idx  index.idx
corpus/lancedb/chunks.lance/_indices/d2282744-012e-4f5e-94df-eeaf94b6c390/: auxiliary.idx  index.idx
corpus/lancedb/chunks.lance/_transactions/: 0-a30fbf16-78af-4343-bbeb-383ecbff4d7c.txn  1-7b11e5b0-ab9a-4090-bf59-357a19705f5a.txn  10-b0e99ed6-c5e1-4d06-bf92-6fe814dbde2f.txn  11-953e7fdc-3a00-4870-adfb-432a07204457.txn  2-6714adce-f31d-4014-9930-43d5bc53d738.txn  3-31301402-8f10-4335-a374-9a884b415703.txn  4-d5b624c1-87bd-4917-b270-8836d5dc16e1.txn  5-4a352e96-076f-408f-a8e3-f6175c5ae7f0.txn  6-b0071566-f5d7-4473-986d-a87f80a53dfb.txn  7-13db0c21-3871-4d67-a4b5-f832e8d96656.txn  8-7178d502-4621-4d41-8740-2f4b5798b3bf.txn  9-50042ef0-2d77-431e-9f9d-a91f39eba89b.txn
eval/: eval_set.json  run_eval.py
(+4 files in other folders)
