[project]
name = "worker-compass"
version = "0.1.0"
description = "Multilingual RAG assistant for migrant worker employment rights in Singapore"
requires-python = ">=3.11"
dependencies = [
    # Web framework
    "streamlit>=1.45.0",

    # LLM clients (OpenAI-compatible)
    "openai>=1.82.0",

    # Embeddings — BGE-M3 via sentence-transformers + PyTorch; huggingface-hub for model download CLI
    "sentence-transformers>=3.0.0",
    "torch>=2.3.0",
    "huggingface-hub>=0.23.0",

    # Vector store
    "lancedb>=0.22.0",

    # Sparse retrieval
    "rank-bm25>=0.2.2",

    # Corpus ETL
    "beautifulsoup4>=4.12.0",
    "requests>=2.32.0",
    "pymupdf4llm>=0.0.22",
    "lxml>=5.3.0",

    # Utilities
    "python-dotenv>=1.1.0",
    "numpy>=1.26.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
    "ruff>=0.11.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker_compass"]

[tool.ruff]
line-length = 100
target-version = "py311"
